# ld44

./: Cargo.toml  LICENSE  README.md  ideas.md
art/aseprite/: Background.aseprite  Button.aseprite  ButtonClicked.aseprite  ButtonHovered.aseprite  Cursor.aseprite  CursorSelected.aseprite  Ground.aseprite  LaserUpOff.aseprite  LaserUpOn.aseprite  LaserVertical.aseprite  Robot-Down.aseprite  Robot-Left.aseprite  Robot-Right.aseprite  TitleScreen.aseprite
src/: ld_entities.rs  level.rs  main.rs  renderer.rs
src/components/: cursor.rs  mod.rs  nav_agent.rs  player.rs  renderable.rs  selectable.rs  target.rs  tile_pos.rs  walkable.rs  world_turn.rs
src/resources/: assets.rs  camera.rs  delta_time.rs  mod.rs  mouse.rs  navmesh.rs  selection.rs  turn_locker.rs
src/states/: game_state.rs  main_menu.rs  main_state.rs  mod.rs
src/stuff/: inventory.rs  mod.rs  stat.rs
src/systems/: mod.rs  sys_cam_follow_cursor.rs  sys_cursor.rs  sys_moving.rs  sys_nav_agent.rs  sys_navigation.rs  sys_renderable.rs  sys_selectable.rs  sys_slct_walkable.rs  sys_turn_lock.rs  sys_ui_player.rs
src/ui/: mod.rs  ui_button.rs
static/level/: level1.txt
